--- a/grpc-poc/grpc-poc.csproj
+++ b/grpc-poc/grpc-poc.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Protobuf Include="Protos\greet.proto" GrpcServices="Server" />
+    <Protobuf Include="Protos\hello.proto" GrpcServices="Server" />
+    <Protobuf Include="Protos\farewell.proto" GrpcServices="Server" />
   </ItemGroup>
 
   <ItemGroup>
