--- a/grpc-poc/appsettings.json
+++ b/grpc-poc/appsettings.json
@@ -8,7 +8,15 @@
   "AllowedHosts": "*",
   "Kestrel": {
     "EndpointDefaults": {
-      "Protocols": "Http2"
+        "Protocols": "Http2"
+    },
+    "Endpoints": {
+        "Http": {
+            "Url": "http://localhost:5001"
+        },
+        "Https": {
+            "Url": "https://localhost:7001"
+        }
     }
   }
 }
